# ripress-wynd-svelte

./: .gitignore  Cargo.toml
frontend/src/: App.svelte
scripts/: build.sh  dev.sh  start.sh
src/: main.rs
